--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ programming.</p>
 								<div>
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/rvhtK0T/gifNb.gif" alt="Image">
-																			<a href="projects/rp.html"><figcaption>	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO)</figcaption></a>
+																			<a href="projects/rp.html"><figcaption>	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO) <font color='red'>in proccess...</font> </figcaption></a>
 									</figure>
 								</div>
 							</article>
@@ -98,6 +98,19 @@ programming.</p>
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/ZT7ttQV/download.png" alt="Image">
 									<a href="https://github.com/AlejandroPinto5/JesusEucaristiaSchool"><figcaption >	Analysis of students physics tests for tenth and eleventh grade.</figcaption></a>
+									</figure>
+								</div>
+							</article>
+						</div>
+					</div>
+						<!-- project 3 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="https://i.ibb.co/VwG8PFb/Screenshot-from-2023-03-22-11-23-01.png" alt="Image">
+									<a href="https://github.com/AlejandroPinto5/KNN-algorithm"><figcaption >KNN-algorithm implemented on a simple model looking the best k with elbow method. Evaluation metric F1 is used.</figcaption></a>
 									</figure>
 								</div>
 							</article>
