Added cv button, padding corrected, but it can be better, and stype of navigation bar fixed

--- a/projects/rp.html
+++ b/projects/rp.html
@@ -42,7 +42,8 @@
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="../index.html"><b>About</b></a>
 				<a class="nav-item" href="../index.html"><b>Projects</b></a>
-				<!-- <a class="nav-item" href="#social">Social</a> -->
+					<!-- <a class="nav-item" href="cv_AP.pdf" target="_blank" download> -->
+						<!-- <button class="download-button"><b>cv</b></button></a> -->
 			</div>
 
 			<span class="nav-toggle">
