--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about"><b>About</b></a>
 				<a class="nav-item" href="#projects"><b>Projects</b></a>
-				<!-- <a class="nav-item" href="#social">Social</a> -->
+					<a class="nav-item" href="cv_AP.pdf" target="_blank" download>
+						<button class="download-button"><b>cv</b></button></a>
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
@@ -84,7 +85,7 @@ programming.</p>
 								<div>
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/rvhtK0T/gifNb.gif" alt="Image">
-																			<a href="projects/rp.html"><figcaption>	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO) <font color='red'>in proccess...</font> </figcaption></a>
+											<a href="projects/rp.html"><figcaption>	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO) <font color='red'>in proccess...</font> </figcaption></a>
 									</figure>
 								</div>
 							</article>
