Added new project: Netflix da

--- a/index.html
+++ b/index.html
@@ -79,13 +79,26 @@ programming.</p>
 
 				<div class="columns is-multiline is-desktop">
 					<!-- Project 1 -->
-					<div class="column">
+					<!-- <div class="column">
 						<div class="box project-text">
 							<article>
 								<div>
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/rvhtK0T/gifNb.gif" alt="Image">
 											<a href="projects/rp.html"><figcaption>	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO) <font color='red'>in proccess...</font> </figcaption></a>
+									</figure>
+								</div>
+							</article>
+						</div>
+					</div> -->
+					<!-- Project Netflix -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="https://i.ibb.co/Nj54ZSH/Screenshot-from-2023-03-28-11-08-44.png" alt="Image">
+									<a href="https://github.com/AlejandroPinto5/Streaming-platform"><figcaption >	Netflix Data Analysis.</figcaption></a>
 									</figure>
 								</div>
 							</article>
