--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<link rel="icon" type="image/x-icon" href="https://i.ibb.co/0nHTTFb/image103.png">
 	<meta name="author" content="ALejandro Pinto">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 	<body>
 		<!-- Navbar -->
@@ -62,11 +62,14 @@
 			</div>
 				<div class="cv">
 				<p>I'm Alejandro Pinto and this is my portfolio. Physicist with more than a year of research experience performing
-computational calculations, data analysis using python language, and
-delivery of scientific reports.</p>
-<p> I have more than a year of experience in the area of teaching university
+					computational calculations, data analysis using python language, and
+					delivery of scientific reports.
+					<p> As a physicist, I have extensive experience in analyzing complex data sets and developing models to describe and predict physical phenomena. This experience has given me a strong foundation in data analysis, statistics, and mathematics, which I have been able to apply to real-world problems in various fields.</p>
+
+					<p>My proficiency in Python has enabled me to develop efficient and scalable data pipelines and perform data analysis using popular libraries such as NumPy, Pandas, and Scikit-Learn. I have also developed several data-driven solutions using machine learning algorithms that have helped organizations optimize their operations and improve their bottom line.</p>
+<!-- <p> I have more than a year of experience in the area of teaching university
 students and secondary education in the teaching of physics, maths and
-programming.</p>
+programming.</p> -->
 </div>
 		</section>
 
