Eda added to mainpage (index)

--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@ programming.</p> -->
 							</article>
 						</div>
 					</div> -->
+					<!-- Project EDA -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="https://i.ibb.co/vJtTSFV/quatum.jpg" alt="Image">
+									<a href="projects/eda.html"><figcaption >	Several project about 'Exploratory Data Analysis'.</figcaption></a>
+									</figure>
+								</div>
+							</article>
+						</div>
+					</div>
 					<!-- Project Netflix -->
 					<div class="column">
 						<div class="box project-text">
