Added project k-fold, updated resume and style project title improved

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					delivery of scientific reports.
 					<p> As a physicist, I have extensive experience in analyzing complex data sets and developing models to describe and predict physical phenomena. This experience has given me a strong foundation in data analysis, statistics, and mathematics, which I have been able to apply to real-world problems in various fields.</p>
 
-					<p>My proficiency in Python has enabled me to develop efficient and scalable data pipelines and perform data analysis using popular libraries such as NumPy, Pandas, and Scikit-Learn. I have also developed several data-driven solutions using machine learning algorithms that have helped organizations optimize their operations and improve their bottom line.</p>
+					<p>My proficiency in Python has enabled me to develop efficient and scalable data pipelines and perform data analysis using popular libraries such as NumPy, Pandas, seaborn, Plotly and Scikit-Learn. I have also developed several data-driven solutions using machine learning algorithms that have helped organizations optimize their operations and improve their bottom line.</p>
 <!-- <p> I have more than a year of experience in the area of teaching university
 students and secondary education in the teaching of physics, maths and
 programming.</p> -->
@@ -77,10 +77,10 @@ programming.</p> -->
 		<section  id="projects" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
-					<h3 class="title is-3">Projects</h3>
+					<h3 class="title is-3"><b>Projects</b></h3>
 				</div>
 
-				<div class="columns is-multiline is-desktop">
+				<div class="project">
 					<!-- Project 1 -->
 					<!-- <div class="column">
 						<div class="box project-text">
@@ -133,7 +133,7 @@ programming.</p> -->
 							</article>
 						</div>
 					</div>
-						<!-- project 3 -->
+						<!-- project knn -->
 					<div class="column">
 						<div class="box project-text">
 							<article>
@@ -146,6 +146,20 @@ programming.</p> -->
 							</article>
 						</div>
 					</div>
+					<!-- project k-fold technique -->
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<figure class="image project-figure">
+									<img src="https://i.ibb.co/M2bHnqB/Screenshot-from-2023-04-04-18-59-25.png" alt="Image">
+								<a href="https://github.com/AlejandroPinto5/K-fold-Cross-Validation"><figcaption >
+K-fold Cross Validation technique using data cleaned and finding an optimal k value.</figcaption></a>
+								</figure>
+							</div>
+						</article>
+					</div>
+				</div>
 				</div>
 			</div>
 		</section>
