tested code listing, but commented, and script controller for mobile fixed

--- a/projects/eda.html
+++ b/projects/eda.html
@@ -80,6 +80,15 @@
                 </ul>
               </ol>
         </div>
+<a  href="netflix-analysis/pieplot.html"><b>test chart on html</b></a>
+<!-- <p>test:</p>
+<pre>
+<code>python</code>
+<code>hello</code>
+<code>world</code>
+ </pre> -->
+
+
       </main-rp>
 
     <!-- Footer -->
@@ -88,6 +97,6 @@
 		</section>
 
 		<!-- Scripts  -->
-		<script src="controller.js"></script>
+		<script src="../controller.js"></script>
 	</body>
 </html>
