Updated asumdm and dt

--- a/projects/eda.html
+++ b/projects/eda.html
@@ -73,14 +73,14 @@
               <p>This is an infography about analytics solutions unified method for data mining (ASUM-DM) and Design Thinking</p>
               <div class="canva">
                 <iframe loading = "lazy"
-                  src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFel3rINpQ&#x2F;watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+                  src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFexgtY32w&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
                 </iframe>
                 <ul>
-                  <li><a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFel3rINpQ&#x2F;watch?utm_content=DAFel3rINpQ&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">ASUM-DM and Design Thinking</a> by Alejandro Pinto</li>
+                  <li><a href="https://www.canva.com/design/DAFexgtY32w/view" target="_blank" rel="noopener">ASUM-DM and Design Thinking</a> by Alejandro Pinto</li>
                 </ul>
               </ol>
         </div>
-<a  href="netflix-analysis/pieplot.html"><b>test chart on html</b></a>
+<!-- <a  href="netflix-analysis/pieplot.html"><b>test chart on html</b></a> -->
 <!-- <p>test:</p>
 <pre>
 <code>python</code>
