--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@ programming.</p> -->
 					</div> -->
 					<!-- Project EDA -->
 					<div class="column">
-						<div class="box project-text">
+						<div class="box project-text jello-horizontal">
 							<article>
-								<div>
+								<div>	<a href="projects/eda.html">
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/vJtTSFV/quatum.jpg" alt="Image">
-									<a href="projects/eda.html"><figcaption >	Several project about 'Exploratory Data Analysis'.</figcaption></a>
+								<figcaption >	Several project about 'Exploratory Data Analysis'.</figcaption></a>
 									</figure>
 								</div>
 							</article>
@@ -109,7 +109,7 @@ programming.</p> -->
 					</div>
 					<!-- Project Netflix -->
 					<div class="column">
-						<div class="box project-text">
+						<div class="box project-text jello-horizontal">
 							<article>
 								<div>
 									<figure class="image project-figure">
@@ -122,12 +122,12 @@ programming.</p> -->
 					</div>
 					<!-- Project 2 -->
 					<div class="column">
-						<div class="box project-text">
+						<div class="box project-text jello-horizontal">
 							<article>
-								<div>
+								<div> <a href="https://github.com/AlejandroPinto5/JesusEucaristiaSchool">
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/ZT7ttQV/download.png" alt="Image">
-									<a href="https://github.com/AlejandroPinto5/JesusEucaristiaSchool"><figcaption >	Analysis of students physics tests for tenth and eleventh grade.</figcaption></a>
+									<figcaption >	Analysis of students physics tests for tenth and eleventh grade.</figcaption></a>
 									</figure>
 								</div>
 							</article>
@@ -135,12 +135,12 @@ programming.</p> -->
 					</div>
 						<!-- project knn -->
 					<div class="column">
-						<div class="box project-text">
+						<div class="box project-text jello-horizontal">
 							<article>
-								<div>
+								<div><a href="https://github.com/AlejandroPinto5/KNN-algorithm">
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/VwG8PFb/Screenshot-from-2023-03-22-11-23-01.png" alt="Image">
-									<a href="https://github.com/AlejandroPinto5/KNN-algorithm"><figcaption >KNN-algorithm implemented on a simple model looking the best k with elbow method. Evaluation metric F1 is used.</figcaption></a>
+									<figcaption >KNN-algorithm implemented on a simple model looking the best k with elbow method. Evaluation metric F1 is used.</figcaption></a>
 									</figure>
 								</div>
 							</article>
@@ -148,12 +148,12 @@ programming.</p> -->
 					</div>
 					<!-- project k-fold technique -->
 				<div class="column">
-					<div class="box project-text">
+					<div class="box project-text jello-horizontal">
 						<article>
-							<div>
+							<div><a href="https://github.com/AlejandroPinto5/K-fold-Cross-Validation">
 								<figure class="image project-figure">
 									<img src="https://i.ibb.co/M2bHnqB/Screenshot-from-2023-04-04-18-59-25.png" alt="Image">
-								<a href="https://github.com/AlejandroPinto5/K-fold-Cross-Validation"><figcaption >
+								<figcaption >
 K-fold Cross Validation technique using data cleaned and finding an optimal k value.</figcaption></a>
 								</figure>
 							</div>
