title of Eucaristic school project updated

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@ programming.</p> -->
 					<div class="column">
 						<div class="box project-text jello-horizontal">
 							<article>
-								<div> <a href="https://github.com/AlejandroPinto5/JesusEucaristiaSchool">
+								<div> <a href="projects/eucaristicschool.html">
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/ZT7ttQV/download.png" alt="Image">
-									<figcaption >	Analysis of students physics tests for tenth and eleventh grade.</figcaption></a>
+									<figcaption >	Insights into Student Performance in High School Physics. </figcaption></a>
 									</figure>
 								</div>
 							</article>
