--- a/projects/eucaristicschool.html
+++ b/projects/eucaristicschool.html
@@ -67,7 +67,7 @@
             </nav>
           </div>
           <div class="rp box">
-            <h1 id="jes">Analysis of Students Physics Tests for Tenth and Eleventh Grade in High School</h1>
+            <h1 id="jes">	Insights into Student Performance in High School Physics: Examining the Results of Physics Tests in Preparation for the Colombian Scholastic Aptitude Test at Jesús Eucaristia School.</h1>
               <p>The following report presents an analysis of the performance of high school students from Jesús Eucaristia School in the area of physics, based on data collected during the year 2021. The objective of this analysis is to evaluate the effectiveness of the school's physics program in preparing students for the Colombian Scholastic Aptitude Test (ICFES), which is a standardized test used to assess the academic performance of students in Colombia. The data includes information on 5 tests taken by 2 courses of 21 students each, for a total of 42 students. The tests cover 4 components of physics (thermodynamics, waves, mechanics, and electromagnetism) and 3 competences (explanation of phenomena, inquiry, and comprehensive use of knowledge). By analyzing this data, we can identify areas of strength and weakness in the school's physics program, and make recommendations for improvement to better prepare students for the ICFES.</p>
               <ol>
                 <h2> <li>OVERVIEW OF THE DATA</li></h2>
