--- a/index.html
+++ b/index.html
@@ -81,19 +81,6 @@ programming.</p> -->
 				</div>
 
 				<div class="project">
-					<!-- Project 1 -->
-					<!-- <div class="column">
-						<div class="box project-text">
-							<article>
-								<div>
-									<figure class="image project-figure">
-										<img src="https://i.ibb.co/rvhtK0T/gifNb.gif" alt="Image">
-											<a href="projects/rp.html"><figcaption>	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO) <font color='red'>in proccess...</font> </figcaption></a>
-									</figure>
-								</div>
-							</article>
-						</div>
-					</div> -->
 					<!-- Project EDA -->
 					<div class="column">
 						<div class="box project-text jello-horizontal">
@@ -160,6 +147,20 @@ K-fold Cross Validation technique using data cleaned and finding an optimal k va
 						</article>
 					</div>
 				</div>
+				<!-- project k-fold technique -->
+			<div class="column">
+				<div class="box project-text jello-horizontal">
+					<article>
+						<div><a href="https://github.com/AlejandroPinto5/linear-regression-model">
+							<figure class="image project-figure">
+								<img src="https://i.ibb.co/WFLp7Nh/Screenshot-from-2023-04-11-17-49-26.png" alt="Image">
+							<figcaption >
+Linear regression model.</figcaption></a>
+							</figure>
+						</div>
+					</article>
+				</div>
+			</div>
 				</div>
 			</div>
 		</section>
