--- a/projects/eucaristicschool.html
+++ b/projects/eucaristicschool.html
@@ -84,26 +84,26 @@
                 <h2><li>OVERALL PERFORMANCE:</li> </h2>
                 <ul>
                   <li>To evaluate the overall performance of the students, we can calculate the average score across all tests and all students.</li>
-                  <li>We can also calculate the average score for each course separately, and compare them to see if there's any significant difference in performance between the two courses.</li>
+                  <li>Calculate the average score for each course separately, and compare them to see if there's any significant difference in performance between the two courses.</li>
                   <li>Additionally, we can analyze the distribution of scores to see if there are any outliers or if the scores are normally distributed.</li>
                 </ul>
                 <h2><li>PERFORMANCE BY PHYSICS COMPONENT:</li></h2>
                 <ul>
-                  <li>We can also analyze the performance of students on each physics component separately.</li>
-                  <li>We can calculate the average score for each component across all tests and all students, and compare them to see which component the students performed the best or worst in.</li>
-                  <li>We can also analyze the distribution of scores for each component to see if there are any differences in performance across the different components.</li>
+                  <li>Analyze the performance of students on each physics component separately.</li>
+                  <li>Calculate the average score for each component across all tests and all students, and compare them to see which component the students performed the best or worst in.</li>
+                  <li>Analyze the distribution of scores for each component to see if there are any differences in performance across the different components.</li>
                 </ul>
                 <h2><li>PERFORMANCE BY competence:</li></h2>
                 <ul>
-                  <li>We can also analyze the performance of students on each competence separately.</li>
-                  <li>We can calculate the average score for each competence across all tests and all students, and compare them to see which competence the students performed the best or worst in.</li>
-                  <li>We can also analyze the distribution of scores for each competence to see if there are any differences in performance across the different competences.</li>
+                  <li>Analyze the performance of students on each competence separately.</li>
+                  <li>Calculate the average score for each competence across all tests and all students, and compare them to see which competence the students performed the best or worst in.</li>
+                  <li>Analyze the distribution of scores for each competence to see if there are any differences in performance across the different competences.</li>
                 </ul>
                 <h2><li>Difficulty of questions:</li></h2>
                 <ul>
-                  <li>We can analyze the difficulty of questions to see if there's any correlation between difficulty and student performance.</li>
-                  <li>We can calculate the average score for each difficulty level of questions, and compare them to see if students performed better on easier or harder questions.</li>
-                  <li>We can also analyze the distribution of scores for each difficulty level to see if there are any differences in performance across the different levels.</li>
+                  <li>Analyze the difficulty of questions to see if there's any correlation between difficulty and student performance.</li>
+                  <li>Calculate the average score for each difficulty level of questions, and compare them to see if students performed better on easier or harder questions.</li>
+                  <li>Analyze the distribution of scores for each difficulty level to see if there are any differences in performance across the different levels.</li>
                 </ul>
                 </ol>
 
