Sena project added

--- a/projects/eda.html
+++ b/projects/eda.html
@@ -61,15 +61,16 @@
   				<!-- Navegation list -->
   				<nav class="nav-list nav-menu">
   					<ul>
-  							<li><a href="#infography">(ASUM-DM) and Design Thinking</a></li>
+  							<li><a href="#info">(ASUM-DM) and Design Thinking</a></li>
+								<li><a href="#info">Data Analysis of Insurance Payments</a></li>
   					</ul>
   				</nav>
   			</div>
         <div class="rp box">
-          <h1 id="eda">EXPLORATORY DATA ANALYSIS</h1>
+          <h1 >EXPLORATORY DATA ANALYSIS</h1>
             <p>Here, you wil find some projects made during the crash course 'Exploratory Data Analysis' directed by S.E.N.A.</p>
             <ol>
-              <li> <h2 id="infography" >(ASUM-DM) AND DESIGN THINKING</h2></li>
+              <li> <h2 id="info" >(ASUM-DM) AND DESIGN THINKING</h2></li>
               <p>This is an infography about analytics solutions unified method for data mining (ASUM-DM) and Design Thinking</p>
               <div class="canva">
                 <iframe loading = "lazy"
@@ -78,8 +79,13 @@
                 <ul>
                   <li><a href="https://www.canva.com/design/DAFexgtY32w/view" target="_blank" rel="noopener">ASUM-DM and Design Thinking</a> by Alejandro Pinto</li>
                 </ul>
-              </ol>
-        </div>
+								</div>
+							<li><h2 id="eda">"Data Analysis of Insurance Payments: Exploring the Relationship between Smoking, BMI, Age, Region, and Payment Amount"</h1></li>
+								<p>An analysis of data related to the cost of insurance premiums based on factors such as age, BMI, smoking status, and region. It describes various figures and steps taken to analyze and interpret the data, including identifying correlations between different variables and identifying trends in the data. The overall goal of the analysis is likely to inform decisions related to insurance pricing and policy.</p>
+								<p>You can find The notebook here:<a href="https://github.com/AlejandroPinto5/sena/blob/main/eda_sena.ipynb">Data Analysis of Insurance Payments</a> </p>
+						</ol>
+
+				  </div>
 <!-- <a  href="netflix-analysis/pieplot.html"><b>test chart on html</b></a> -->
 <!-- <p>test:</p>
 <pre>
@@ -87,8 +93,6 @@
 <code>hello</code>
 <code>world</code>
  </pre> -->
-
-
       </main-rp>
 
     <!-- Footer -->
