--- a/projects/eda.html
+++ b/projects/eda.html
@@ -62,13 +62,14 @@
   				<nav class="nav-list nav-menu">
   					<ul>
   							<li><a href="#info">(ASUM-DM) and Design Thinking</a></li>
-								<li><a href="#info">Data Analysis of Insurance Payments</a></li>
+								<li><a href="#eda">Data Analysis of Insurance Payments</a></li>
+								<li><a href="#plots">Discover the power of data Visualization with Seaborn</a></li>
   					</ul>
   				</nav>
   			</div>
         <div class="rp box">
           <h1 >EXPLORATORY DATA ANALYSIS</h1>
-            <p>Here, you wil find some projects made during the crash course 'Exploratory Data Analysis' directed by S.E.N.A.</p>
+            <p>Here, you will find some projects made during the crash course 'Exploratory Data Analysis' directed by S.E.N.A.</p>
             <ol>
               <li> <h2 id="info" >(ASUM-DM) AND DESIGN THINKING</h2></li>
               <p>This is an infography about analytics solutions unified method for data mining (ASUM-DM) and Design Thinking</p>
@@ -82,7 +83,15 @@
 								</div>
 							<li><h2 id="eda">"Data Analysis of Insurance Payments: Exploring the Relationship between Smoking, BMI, Age, Region, and Payment Amount"</h1></li>
 								<p>An analysis of data related to the cost of insurance premiums based on factors such as age, BMI, smoking status, and region. It describes various figures and steps taken to analyze and interpret the data, including identifying correlations between different variables and identifying trends in the data. The overall goal of the analysis is likely to inform decisions related to insurance pricing and policy.</p>
-								<p>You can find The notebook here:<a href="https://github.com/AlejandroPinto5/sena/blob/main/eda_sena.ipynb">Data Analysis of Insurance Payments</a> </p>
+								<p>You can find the notebook here: <a href="https://github.com/AlejandroPinto5/sena/blob/main/eda_sena.ipynb">Data Analysis of Insurance Payments</a> </p>
+								<li><h2 id="plots">"Discover the power of data Visualization with Seaborn"</h1></li>
+									<p>This is a presentation about different types of plot with Seaborn</p>
+									<div class="canva">
+										<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQUEm8-nCXNTFScXydImZVpWA8N_xrhvquOmTwPXYp0kEZqy31mcglXm1zPtNUKyfS923_MwSoFNJCj/embed?start=true&loop=true&delayms=3000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+										<ul>
+											<li><a href="https://docs.google.com/presentation/d/e/2PACX-1vQUEm8-nCXNTFScXydImZVpWA8N_xrhvquOmTwPXYp0kEZqy31mcglXm1zPtNUKyfS923_MwSoFNJCj/embed?start=true&loop=true&delayms=3000" target="_blank" rel="noopener">Types of plots with seaborn</a> by Alejandro Pinto</li>
+										</ul>
+									</div>
 						</ol>
 
 				  </div>
