Linear model updated

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@ programming.</p> -->
 				<div class="column">
 					<div class="box project-text jello-horizontal">
 						<article>
-							<div><a href="https://github.com/AlejandroPinto5/linear-regression-model">
+							<div><a href="https://github.com/AlejandroPinto5/linear-models/blob/main/linear_regressaion.ipynb">
 								<figure class="image project-figure">
-									<img src="https://i.ibb.co/WFLp7Nh/Screenshot-from-2023-04-11-17-49-26.png" alt="Image">
+									<img src="https://i.ibb.co/BcjcQ60/Screenshot-from-2023-04-18-10-16-02.png" alt="Image">
 								<figcaption >
-	Linear regression model.</figcaption></a>
+										Linear regression model.</figcaption></a>
 								</figure>
 							</div>
 						</article>
