Logistic regression added

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ programming.</p> -->
 							</article>
 						</div>
 					</div>
-					<!-- project k-fold technique -->
+					<!-- project linear regression -->
 				<div class="column">
 					<div class="box project-text jello-horizontal">
 						<article>
@@ -134,6 +134,20 @@ programming.</p> -->
 						</article>
 					</div>
 				</div>
+				<!-- project linear regression -->
+			<div class="column">
+				<div class="box project-text jello-horizontal">
+					<article>
+						<div><a href="https://github.com/AlejandroPinto5/linear-models/blob/main/logistic_regression.ipynb">
+							<figure class="image project-figure">
+								<img src="https://i.ibb.co/9ckvnPY/Screenshot-from-2023-04-18-11-15-37.png" alt="Image">
+							<figcaption >
+									Logistic regression model implemented on titanic survival problem.</figcaption></a>
+							</figure>
+						</div>
+					</article>
+				</div>
+			</div>
 						<!-- project knn -->
 					<div class="column">
 						<div class="box project-text jello-horizontal">
