Project about kpis and ab testing added

--- a/index.html
+++ b/index.html
@@ -134,6 +134,20 @@ programming.</p> -->
 						</article>
 					</div>
 				</div>
+				<!-- project ab testing and kpi -->
+			<div class="column">
+				<div class="box project-text jello-horizontal">
+					<article>
+						<div><a href="https://github.com/AlejandroPinto5/linear-models/blob/main/logistic_regression.ipynb">
+							<figure class="image project-figure">
+								<img src="https://i.ibb.co/9ckvnPY/Screenshot-from-2023-04-18-11-15-37.png" alt="Image">
+							<figcaption >
+									Leveraging Machine Learning for Data-Driven Optimization in Online Grocery Business: A Supermarket Case Study".</figcaption></a>
+							</figure>
+						</div>
+					</article>
+				</div>
+			</div>
 				<!-- project linear regression -->
 			<div class="column">
 				<div class="box project-text jello-horizontal">
