Project hyperlink store fixed

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@ programming.</p> -->
 			<div class="column">
 				<div class="box project-text jello-horizontal">
 					<article>
-						<div><a href="https://github.com/AlejandroPinto5/linear-models/blob/main/logistic_regression.ipynb">
+						<div><a href="projects/case-study.html">
 							<figure class="image project-figure">
-								<img src="https://i.ibb.co/9ckvnPY/Screenshot-from-2023-04-18-11-15-37.png" alt="Image">
+								<img src="https://i.ibb.co/MVjG1WF/images-1.jpg" alt="Image">
 							<figcaption >
-									Leveraging Machine Learning for Data-Driven Optimization in Online Grocery Business: A Supermarket Case Study".</figcaption></a>
+									Leveraging Machine Learning for Data-Driven Optimization in Online Grocery Business: A Online Grocery store Case Study".</figcaption></a>
 							</figure>
 						</div>
 					</article>
