Churn project added

--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@ programming.</p> -->
 							</article>
 						</div>
 					</div>
+					<!-- Project Churn -->
+					<div class="column">
+						<div class="box project-text jello-horizontal">
+							<article>
+								<div> <a href="projects/churn-pred-proj.html">
+									<figure class="image project-figure">
+										<img src="" alt="Image">
+									<figcaption >	Churn Prediction Project Using Logistic Regression. </figcaption></a>
+									</figure>
+								</div>
+							</article>
+						</div>
+					</div>
 					<!-- project linear regression -->
 				<div class="column">
 					<div class="box project-text jello-horizontal">
