Image to churn project added

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ programming.</p> -->
 							<article>
 								<div> <a href="projects/churn-pred-proj.html">
 									<figure class="image project-figure">
-										<img src="" alt="Image">
+										<img src="https://i.ibb.co/sq9ckQS/Screenshot-from-2023-04-25-10-39-29.png" alt="Image">
 									<figcaption >	Churn Prediction Project Using Logistic Regression. </figcaption></a>
 									</figure>
 								</div>
