Changed first to last, dictionary is the alast

--- a/projects/churn-pred-proj.html
+++ b/projects/churn-pred-proj.html
@@ -62,53 +62,19 @@
   				<!-- Navegation list -->
   				<nav class="nav-list nav-menu">
   					<ul>
-  							<li><a href="#dataaDictionary">Data Dictionary</a></li>
 								<li><a href="#process">Process to Follow</a></li>
 								<li><a href="https://github.com/AlejandroPinto5/linear-models/blob/main/Churn_prediction_project.ipynb">Google Colab Notebook</a></li>
+								<li><a href="#dataaDictionary">Data Dictionary</a></li>
   					</ul>
   				</nav>
   			</div>
         <div class="rp box">
           <h1>Churn Prediction using Logistic Regression</h1>
-          <p>Predicting Whether a Customer Will Churn or Not. The target outcome which it wants to predict is churn. Churn is defined as as the costumer falling below the minimum value required. First of all, it presents Data dictionary:</p>
+          <p>Predicting Whether a Customer Will Churn or Not. The target outcome which it wants to predict is churn. Churn is defined as as the costumer falling below the minimum value required. First of all, I present the process to follow:</p>
 
           <ol>
-            <h2 id="dataDictionary"><li>Data Dictionary</li></h2>
-            <p>There are multiple variables in the dataset which can be cleanly divided in 3 categories:</p>
-            <ol>
-              <h3><li>Demographic information about customers</li></h3>
-              <ul>
-                <li><b>customer_id</b> - Customer id</li>
-                <li><b>vintage</b> - Vintage of the customer with the bank in number of days</li>
-                <li><b>age</b> - Age of customer</li>
-                <li><b>gender</b> - Gender of customer</li>
-                <li><b>dependents</b> - Number of dependents</li>
-                <li><b>occupation</b> - Occupation of the customer </li>
-                <li><b>city</b> - City of customer (anonymised)</li>
-              </ul>
-              <h3><li>Customer Bank Relationship</li></h3>
-              <ul>
-                <li><b>customer_nw_category</b> - Net worth of customer (3:Low 2:Medium 1:High)</li>
-                <li><b>branch_code</b> - Branch Code for customer account</li>
-                <li><b>days_since_last_transaction</b> - No of Days Since Last Credit in Last 1 year</li>
-              </ul>
-              <h3><li>Transactional Information</li></h3>
-              <ul>
-                <li><b>current_balance</b> - Balance as of today</li>
-                <li><b>previous_month_end_balance</b> - End of Month Balance of previous month</li>
-                <li><b>average_monthly_balance_prevQ</b> - Average monthly balances (AMB) in Previous Quarter</li>
-                <li><b>average_monthly_balance_prevQ2</b> - Average monthly balances (AMB) in previous to previous quarter</li>
-                <li><b>current_month_credit</b> - Total Credit Amount current month</li>
-                <li><b>previous_month_credit</b> - Total Credit Amount previous month</li>
-                <li><b>current_month_debit</b> - Total Debit Amount current month</li>
-                <li><b>previous_month_debit</b> - Total Debit Amount previous month</li>
-                <li><b>current_month_balance</b> - Average Balance of current month</li>
-                <li><b>previous_month_balance</b> - Average Balance of previous month</li>
-                <li><b>churn</b> - Average balance of customer falls below minimum balance in the next quarter (1/0)</li>
-              </ul>
-            </ol>
             <h2 id="process"><li>Process to Follow</li></h2>
-            <p>Now, that we understand the dataset in detail. It is time to build a logistic regression model to predict the churn.</p>
+            <p>It is time to build a logistic regression model to predict the churn.</p>
             <ul>
               <li>Load Data and Packages for model building & preprocessing.</li>
               <li>Preprocessing & Missing value imputation.</li>
@@ -119,6 +85,40 @@
             </ul>
             <h2 id="notebook"><li>Google Colab Notebook</li></h2>
               <p>You can find the notebook here: <a href="https://github.com/AlejandroPinto5/linear-models/blob/main/Churn_prediction_project.ipynb">Churn Prediction Project</a></p>
+							<h2 id="dataDictionary"><li>Data Dictionary</li></h2>
+							<p>There are multiple variables in the dataset which can be cleanly divided in 3 categories:</p>
+							<ol>
+								<h3><li>Demographic information about customers</li></h3>
+								<ul>
+									<li><b>customer_id</b> - Customer id</li>
+									<li><b>vintage</b> - Vintage of the customer with the bank in number of days</li>
+									<li><b>age</b> - Age of customer</li>
+									<li><b>gender</b> - Gender of customer</li>
+									<li><b>dependents</b> - Number of dependents</li>
+									<li><b>occupation</b> - Occupation of the customer </li>
+									<li><b>city</b> - City of customer (anonymised)</li>
+								</ul>
+								<h3><li>Customer Bank Relationship</li></h3>
+								<ul>
+									<li><b>customer_nw_category</b> - Net worth of customer (3:Low 2:Medium 1:High)</li>
+									<li><b>branch_code</b> - Branch Code for customer account</li>
+									<li><b>days_since_last_transaction</b> - No of Days Since Last Credit in Last 1 year</li>
+								</ul>
+								<h3><li>Transactional Information</li></h3>
+								<ul>
+									<li><b>current_balance</b> - Balance as of today</li>
+									<li><b>previous_month_end_balance</b> - End of Month Balance of previous month</li>
+									<li><b>average_monthly_balance_prevQ</b> - Average monthly balances (AMB) in Previous Quarter</li>
+									<li><b>average_monthly_balance_prevQ2</b> - Average monthly balances (AMB) in previous to previous quarter</li>
+									<li><b>current_month_credit</b> - Total Credit Amount current month</li>
+									<li><b>previous_month_credit</b> - Total Credit Amount previous month</li>
+									<li><b>current_month_debit</b> - Total Debit Amount current month</li>
+									<li><b>previous_month_debit</b> - Total Debit Amount previous month</li>
+									<li><b>current_month_balance</b> - Average Balance of current month</li>
+									<li><b>previous_month_balance</b> - Average Balance of previous month</li>
+									<li><b>churn</b> - Average balance of customer falls below minimum balance in the next quarter (1/0)</li>
+								</ul>
+							</ol>
           </ol>
         </div>
 <!-- <a  href="netflix-analysis/pieplot.html"><b>test chart on html</b></a> -->
