Final report added

--- a/projects/eda.html
+++ b/projects/eda.html
@@ -92,6 +92,14 @@
 											<li><a href="https://docs.google.com/presentation/d/e/2PACX-1vQUEm8-nCXNTFScXydImZVpWA8N_xrhvquOmTwPXYp0kEZqy31mcglXm1zPtNUKyfS923_MwSoFNJCj/embed?start=true&loop=true&delayms=3000" target="_blank" rel="noopener">Types of plots with seaborn</a> by Alejandro Pinto</li>
 										</ul>
 									</div>
+									<h2 id="report"><li>"Final Report"</li></h1>
+										<p>This is an exploratory data analysis of properties available for sale at CISA, Colombia."</p>
+										<div class="canva">
+											<iframe src="../informeResultados.pdf" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+											<ul>
+												<li>EDA final Report of: <a href="https://www.datos.gov.co/Hacienda-y-Cr-dito-P-blico/Inmuebles-Disponibles-Para-La-Venta/72gd-px77/data" target="_blank" rel="noopener">Properties available for sale</a> by Alejandro Pinto</li>
+											</ul>
+										</div>
 						</ol>
 
 				  </div>
