Decision tree project added, Netflix project has been hidden

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ programming.</p> -->
 						</div>
 					</div>
 					<!-- Project Netflix -->
-					<div class="column">
+					<!-- <div class="column">
 						<div class="box project-text jello-horizontal">
 							<article>
 								<div>
@@ -126,7 +126,7 @@ programming.</p> -->
 								</div>
 							</article>
 						</div>
-					</div>
+					</div> -->
 					<!-- Project 2 -->
 					<div class="column">
 						<div class="box project-text jello-horizontal">
@@ -181,6 +181,21 @@ programming.</p> -->
 					</article>
 				</div>
 			</div>
+			<!-- project decision tree implementation -->
+		<div class="column">
+			<div class="box project-text jello-horizontal sql">
+				<article>
+					<div><a href="projects/case-study.html">
+						<figure class="image project-figure">
+							<img src="https://i.ibb.co/2FWF6MV/Screenshot-from-2023-04-28-10-51-13.png" alt="Image" class="img-responsive" >
+						<figcaption >
+								Decision tree model with maximum depth of 3. Gini impurity is implemented.
+						</figcaption></a>
+						</figure>
+					</div>
+				</article>
+			</div>
+		</div>
 				<!-- project linear regression -->
 			<div class="column bi">
 				<div class="box project-text jello-horizontal">
